--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div id="channels"></div>
 
   <script>
-    const m3uUrl = "https://raw.githubusercontent.com/PRENDLYMADAPAKER/ANG-KALAT-MO/main/IPTVPREMIUM.m3u";
+    const m3uUrl = "https://raw.githubusercontent.com/PRENDLYMADAPAKER/ANG-KALAT-MO/main/IPTV%20PREMIUM";
 
     async function loadChannels() {
       const res = await fetch(m3uUrl);
