--- a/login.html
+++ b/login.html
@@ -39,10 +39,8 @@
   <!-- Firebase SDKs -->
   <script type="module" src="firebase-config.js"></script>
   <script type="module">
-    import { signInWithEmailAndPassword, onAuthStateChanged } 
-      from "https://www.gstatic.com/firebasejs/10.13.2/firebase-auth.js";
-    import { ref, get, set, update, remove } 
-      from "https://www.gstatic.com/firebasejs/10.13.2/firebase-database.js";
+    import { signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-auth.js";
+    import { ref, get, update, remove } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-database.js";
 
     const msg = document.getElementById('msg');
     const loginBtn = document.getElementById('loginBtn');
@@ -53,17 +51,39 @@
       return id;
     })();
 
-    // DevTools protection
-    setInterval(() => {
-      if (window.outerWidth - window.innerWidth > 160 || window.outerHeight - window.innerHeight > 160) {
-        document.body.innerHTML = ""; window.close();
-      }
-    }, 1000);
+    // Stronger DevTools protection
+    function antiDevTools() {
+      // Detect devtools via dimensions
+      setInterval(() => {
+        if (window.outerWidth - window.innerWidth > 160 || window.outerHeight - window.innerHeight > 160) {
+          document.body.innerHTML = "";
+          window.close();
+        }
+      }, 1000);
+
+      // Disable right-click & key combos
+      document.addEventListener("contextmenu", e => e.preventDefault());
+      document.onkeydown = e => {
+        if (
+          e.key === "F12" ||
+          (e.ctrlKey && e.shiftKey && (e.key === "I" || e.key === "J" || e.key === "C")) ||
+          (e.ctrlKey && e.key === "U")
+        ) {
+          e.preventDefault();
+          document.body.innerHTML = "";
+          window.close();
+        }
+      };
+    }
+    antiDevTools();
 
     loginBtn.onclick = async () => {
       msg.textContent = "Signing in...";
-      const email = email.value.trim();
-      const password = password.value.trim();
+      const emailField = document.getElementById('email');
+      const passwordField = document.getElementById('password');
+      const email = emailField.value.trim();
+      const password = passwordField.value.trim();
+
       try {
         const cred = await signInWithEmailAndPassword(window.auth, email, password);
         const uid = cred.user.uid;
@@ -82,7 +102,7 @@
         const now = new Date().toISOString();
         let devices = devSnap.exists() ? devSnap.val() : {};
 
-        // Keep only 2 most recent
+        // Keep only 2 devices
         const entries = Object.entries(devices);
         if (entries.length >= 2) {
           entries.sort((a,b)=>new Date(a[1].timestamp)-new Date(b[1].timestamp));
@@ -104,4 +124,4 @@
     };
   </script>
 </body>
-  </html>
+</html>
